--- a/index.html
+++ b/index.html
@@ -35,27 +35,27 @@
     <h2>My Recent Works</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="D:\Editing\programming\JavaScript\Projects\portfolio\broly.jpg" alt="Video Example 1">
+        <img src="\assets\broly.jpg" alt="Video Example 1">
         <p>After Dark x Dragon Ball</p>
       </div>
       <div class="portfolio-item">
-        <img src="D:\Editing\programming\JavaScript\Projects\portfolio\gogeta.jpg" alt="Video Example 2">
+        <img src="\assets\gogeta.jpg" alt="Video Example 2">
         <p>Gogeta vs Broly</p>
       </div>
       <div class="portfolio-item">
-        <img src="D:\Editing\programming\JavaScript\Projects\portfolio\saber.jpg" alt="Video Example 3">
+        <img src="\assets\saber.jpg" alt="Video Example 3">
         <p>Fate: Stay Night Heaven's feel</p>
       </div>
       <div class="portfolio-item">
-        <img src="D:\Editing\programming\JavaScript\Projects\portfolio\sekiro.jpg" alt="Video Example 4">
+        <img src="\assets\sekiro.jpg" alt="Video Example 4">
         <p>Sekiro: Shadows Die Twice</p>
       </div>
       <div class="portfolio-item">
-        <img src="D:\Editing\programming\JavaScript\Projects\portfolio\gojo.jpg" alt="Video Example 4">
+        <img src="\assets\gojo.jpg" alt="Video Example 4">
         <p>Jujustku Kaisen</p>
       </div>
       <div class="portfolio-item">
-        <img src="D:\Editing\programming\JavaScript\Projects\portfolio\mui.jpg" alt="Video Example 4">
+        <img src="\assets\mui.jpg" alt="Video Example 4">
         <p>Mastered Ultra Instinct</p>
       </div>
     </div>
