--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="hero-content">
       <h1>Tanish Adke</h1>
       <p>I Create What You Desire</p>
-      <a href="portfolio.html" class="cta-button">View My Work</a>
+      <a href="index.html" class="cta-button">View My Work</a>
     </div>
   </section>
 
@@ -35,27 +35,33 @@
     <h2>My Recent Works</h2>
     <div class="portfolio-grid">
       <div class="portfolio-item">
-        <img src="\assets\broly.jpg" alt="Video Example 1">
+        <!-- <img src="https://imgur.com/N67agIj" alt="Video Example 1"> -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="N67agIj"><a href="https://imgur.com/N67agIj">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <p>After Dark x Dragon Ball</p>
       </div>
       <div class="portfolio-item">
-        <img src="\assets\gogeta.jpg" alt="Video Example 2">
+        <!-- <img src="\assets\gogeta.jpg" alt="Video Example 2"> -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="RAGqY74"><a href="https://imgur.com/RAGqY74">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <p>Gogeta vs Broly</p>
       </div>
       <div class="portfolio-item">
-        <img src="\assets\saber.jpg" alt="Video Example 3">
+        <!-- <img src="\assets\saber.jpg" alt="Video Example 3"> -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="ggAknyZ"><a href="https://imgur.com/ggAknyZ">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <p>Fate: Stay Night Heaven's feel</p>
       </div>
       <div class="portfolio-item">
-        <img src="\assets\sekiro.jpg" alt="Video Example 4">
+        <!-- <img src="\assets\sekiro.jpg" alt="Video Example 4"> -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="btEyr08"><a href="https://imgur.com/btEyr08"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <p>Sekiro: Shadows Die Twice</p>
       </div>
       <div class="portfolio-item">
-        <img src="\assets\gojo.jpg" alt="Video Example 4">
-        <p>Jujustku Kaisen</p>
+        <!-- <img src="\assets\gojo.jpg" alt="Video Example 4"> -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="sohlgqd"><a href="https://imgur.com/sohlgqd">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+        <p>Jujutsu Kaisen</p>
       </div>
       <div class="portfolio-item">
-        <img src="\assets\mui.jpg" alt="Video Example 4">
+        <!-- <img src="\assets\mui.jpg" alt="Video Example 4"> -->
+        <blockquote class="imgur-embed-pub" lang="en" data-id="XhrcvGc"><a href="https://imgur.com/XhrcvGc">View post on imgur.com</a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
         <p>Mastered Ultra Instinct</p>
       </div>
     </div>
@@ -65,7 +71,7 @@
   <section id="contact" class="contact">
     <h2>Contact</h2>
     <p>Get in touch with me for your next video project.</p>
-    <a href="mailto:email@example.com" class="cta-button">Email Me</a>
+    <a href="mailto:email@example.com" class="cta-button" aria-placeholder="creezira">Discord Me!</a>
   </section>
 
   <!-- Footer -->
