--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="src/about.html">About</a></li>
+        <li><a href="/portfolio/index.html">Home</a></li>
+        <li><a href="/portfolio/src/about.html">About</a></li>
         <!--<li><a href="portfolio.html">Portfolio</a></li>-->
-        <li><a href="src/contact.html">Contact</a></li>
+        <li><a href="/portfolio/src/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
