--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -16,9 +16,9 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="/portfolio/src/about.html">About</a></li>
         <!--<li><a href="portfolio.html">Portfolio</a></li>-->
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="/portfolio/src/contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
